--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-    src: url(fonts/style-thief-font/StyleThief-Mz6w.ttf);
+    src: chloemessineo.github.io/StyleThief-Mz6w.ttf;
     font-family: StyleThief;
 }
 * {
@@ -10,7 +10,7 @@
     display: grid;
     grid-template-rows: 15vh 45vh 45vh 15vh; 
     grid-template-columns: 1fr 1fr;
-    background-image:url(images/catprint.jpg);
+    background-image:chloemessineo.github.io/catprint.jpg;
     background-position: bottom;
     background-size: cover;
     background-repeat: no-repeat;
@@ -184,7 +184,7 @@ footer {
     display: grid;
     grid-template-rows: 15vh 45vh 45vh 15vh; 
     grid-template-columns: 1fr 1fr 1fr;
-    background-image: url(images/vinyl.jpg);
+    background-image: chloemessineo.github.io/vinyl.jpg;
     background-repeat: no-repeat;
     background-size: cover;
     max-width: 100vw;
@@ -211,7 +211,7 @@ footer {
     display: grid;
     grid-row: 15vh 70vh 15vh;
     grid-column: 1fr 1fr;
-    background-image: url(images/catprint.jpg);
+    background-image: chloemessineo.github.io/catprint.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
