--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-    src: chloemessineo.github.io/StyleThief-Mz6w.ttf;
+    src: url(chloemessineo.github.io/StyleThief-Mz6w.ttf);
     font-family: StyleThief;
 }
 * {
