--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     display: grid;
     grid-template-rows: 15vh 45vh 45vh 15vh; 
     grid-template-columns: 1fr 1fr;
-    background-image:chloemessineo.github.io/catprint.jpg;
+    background-image: ./catprint.jpg;
     background-position: bottom;
     background-size: cover;
     background-repeat: no-repeat;
@@ -184,7 +184,7 @@ footer {
     display: grid;
     grid-template-rows: 15vh 45vh 45vh 15vh; 
     grid-template-columns: 1fr 1fr 1fr;
-    background-image: chloemessineo.github.io/vinyl.jpg;
+    background-image: ./vinyl.jpg;
     background-repeat: no-repeat;
     background-size: cover;
     max-width: 100vw;
@@ -211,7 +211,7 @@ footer {
     display: grid;
     grid-row: 15vh 70vh 15vh;
     grid-column: 1fr 1fr;
-    background-image: chloemessineo.github.io/catprint.jpg;
+    background-image: ./catprint.jpg;
     background-size: cover;
     background-repeat: no-repeat;
 }
